--- a/.github/workflows/mastodon-backup.yml
+++ b/.github/workflows/mastodon-backup.yml
@@ -24,15 +24,15 @@ jobs:
     - name: Calculate current date and time
       id: current_datetime
       run: |
-        echo "::set-output name=year::$(date -u +'%Y')"
-        echo "::set-output name=day::$(date -u +'%Y-%m-%d')"
-        echo "::set-output name=hour::$(date -u +'%H:%M')"
+        echo "YEAR=$(date -u +'%Y')" >> $GITHUB_ENV
+        echo "DAY=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
+        echo "HOUR=$(date -u +'%H:%M')"  >> $GITHUB_ENV
 
     - name: Backup Mastodon posts
       env:
         MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-        MASTODON_BASE_URL: ${{ secrets.MASTODON_BASE_URL }}
-      run: python backup_mastodon.py
+        MASTODON_BASE_URL: ${{ vars.MASTODON_BASE_URL }}
+      run: python mastodon_backup.py
 
     - name: Commit and push backup
       run: |
