fixed secret reference

--- a/.github/workflows/mastodon-backup.yml
+++ b/.github/workflows/mastodon-backup.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Backup Mastodon posts
         env:
-          MASTODON_ACCESS_TOKEN: ${{ inputs.mastodon_access_token }}
+          MASTODON_ACCESS_TOKEN: ${{ secrets.mastodon_access_token }}
           MASTODON_BASE_URL: ${{ inputs.mastodon_base_url }}
         working-directory: mastodon-backup
         run: python mastodon_backup.py
