--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Mastodon Backup Action'
+name: 'Mastodon Backup'
 description: 'A GitHub Action to backup Mastodon posts'
 author: 'Schwitzd'
 inputs:
@@ -10,3 +10,63 @@ inputs:
     description: 'Mastodon instance base URL'
     required: true
     type: string
+outputs:
+  backup_file:
+    description: 'Path to the backup JSON file'
+
+runs:
+  using: 'composite'
+  steps:
+    - name: Checkout main repository
+      uses: actions/checkout@v4
+      with:
+        path: main
+      
+    - name: Checkout mastodon-backup repository
+      uses: actions/checkout@v4
+      with:
+        repository: 'Schwitzd/mastodon-backup-action'
+        path: mastodon-backup
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+
+    - name: Install dependencies
+      working-directory: mastodon-backup
+      run: pip install -r requirements.txt
+
+    - name: Calculate current date and time
+      id: current_datetime
+      run: |
+        echo "YEAR=$(date -u +'%Y')" >> $GITHUB_ENV
+        echo "DAY=$(date -u +'%Y-%m-%d')" >> $GITHUB_ENV
+        echo "HOUR=$(date -u +'%H:%M')"  >> $GITHUB_ENV
+
+    - name: Backup Mastodon posts
+      env:
+        MASTODON_ACCESS_TOKEN: ${{ secrets.mastodon_access_token }}
+        MASTODON_BASE_URL: ${{ inputs.mastodon_base_url }}
+      working-directory: mastodon-backup
+      run: python mastodon_backup.py
+
+    - name: Move backup file to main repository
+      run: |
+        mv mastodon-backup/mastodon_backup.json main/mastodon_posts_${YEAR}.json
+
+    - name: Commit and push backup
+      working-directory: main
+      run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add mastodon_posts_${YEAR}.json
+        if git diff-index --quiet HEAD; then
+          echo "No changes to commit"
+        else
+          git commit -m "Backup on ${DAY} ${HOUR}"
+          git push
+
+branding:
+  icon: 'database'
+  color: 'purple'
